# kernel_dev

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
src/: VGA_BUFFER.rs  allocator.rs  cmos.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
