[package]
name = "kernel_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# qemu test args that enable exit from the guest kernel
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio", "-display", "none"
    ] 
#this is required as cargo test considers all error codes other than 0
#as a failure, but qemu exit codes are (0x10 << 1) | 1
test-success-exit-code = 33
test-timeout = 60 # wait one minute if caught in an endless loop during test